--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="youtube">Youtube</string>
     <!-- href tag is used to add link-->
     <!-- link for home text view-->
-    <string name="hyperlink"><a href="https://www.youtube.com/">YouTube</a></string>
+    <string name="hyperlink"><a href="https://youtu.be/Y6wUAcyPS-A">YouTube</a></string>
     <string name="update_location">Update Location</string>
 
 </resources>
